Padding and alignment issues

--- a/css/ext_iastate.css
+++ b/css/ext_iastate.css
@@ -204,7 +204,7 @@ a.isu-dropdown-submenu {
 	line-height: 1.32857;
 	font-weight: 400;
 	letter-spacing: 0;
-	margin: 3.5625rem 0 0.625rem;
+	margin: 3.5625rem 0.6rem 0.625rem;
 }
 
 /* Change Authored on information display */
@@ -981,6 +981,11 @@ div#block-staff-links div {
 	width: 100%;
 }
 
+.layout__region--first, .layout__region--second, .layout__region--third {
+	margin: 0 auto;
+	height: 100%;
+}
+
 .announcement {
 	font-weight: 700;
 	padding-bottom: 20px;
@@ -1056,7 +1061,7 @@ form#node-layout-ct-layout-builder-form {
 /* Layout Builder Content Type */
 .node-type_layout-ct .row,
 .node-type_educational-programs-page .row,
-.node-type_homepage-ct .row {
+.node-type_homepage-ct .row, .node-type .row {
 	margin-left: 0;
 	margin-right: 0;
 }
@@ -1390,13 +1395,19 @@ div.fontawesome-icon i {
 /* ## Responsive
 /* --------------------------------------  */
 @media (min-width: 992px) {
+	.isu-region_content .isu-block:not(.isu-block-front) {
+		margin: auto;
+		padding-left: 1%;
+		max-width: 1199px;
+	}
+	
 	.isu-wordmark-logo {
 		max-width: 365px;
 		margin-left: -6%;
 	}
 
 	.navbar-expand-lg .navbar-nav {
-		margin-left: -19px;
+		margin-left: -15px;
 	}
 
 	.isu-col-header-first {
@@ -1409,7 +1420,13 @@ div.fontawesome-icon i {
 
 
 @media screen and (max-width : 1199px) {
-
+	.isu-region_content .isu-block:not(.isu-block-front) {
+		padding-left: 0%;
+		padding-right: 0%;
+		margin: auto;
+		max-width: 992px;
+	}
+	
 	.isu-social-menu-footer{
 		margin-left: 10px;
 	}
@@ -1445,6 +1462,13 @@ div.fontawesome-icon i {
 
 
 @media screen and (max-width : 991px) {
+	 .isu-region_content .isu-block:not(.isu-block-front) {
+		padding-left: 2.5%;
+		padding-right: 0%;
+		margin: auto;
+		max-width: 991px;
+	}
+	
  	.isu-wordmark-logo {
  		max-width: 360px;
 		margin-top: 0.5rem;
